[package]
name = "openworkers-runner"
version = "0.8.5"
edition = "2024"
license = "MIT"
default-run = "openworkers-runner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["database"]
v8 = ["dep:openworkers-runtime-v8"]
wasm = ["dep:openworkers-runtime-wasm", "openworkers-core/wasm"]
database = ["dep:postgate"]
# Disabled runtimes (require core 0.5, we're on 0.7) - kept as empty features to avoid cfg warnings
deno = []
quickjs = []
boa = []
jsc = []

[dependencies]
# HTTP server (hyper)
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1.11.0"
log = "0.4.29"
tokio = "1.49.0"
tokio-util = { version = "0.7", features = ["rt"] }
flume = "0.12.0"
once_cell = "1.19"
env_logger = "0.11.6"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "uuid", "bigdecimal", "rust_decimal" ] }
reqwest = { version = "0.13.1", default-features = false, features = ["rustls", "json", "stream"] }

# Core types
# openworkers-core = { path = "../openworkers-core", features = ["hyper"] }
openworkers-core = { git = "https://github.com/openworkers/openworkers-core", tag = "v0.8.1", features = ["hyper"] }

# Runtime backend (v8 only for now, others require core 0.5)
openworkers-runtime-v8 = { path = "../openworkers-runtime-v8", optional = true }
# openworkers-runtime-v8 = { git = "https://github.com/openworkers/openworkers-runtime-v8", tag = "v0.8.4", optional = true }

# WASM runtime (optional)
# openworkers-runtime-wasm = { path = "../openworkers-runtime-wasm", optional = true }
openworkers-runtime-wasm = {  git = "https://github.com/openworkers/openworkers-runtime-wasm", tag = "v0.1.0", optional = true }

# Database bindings (optional)
# postgate = { path = "../postgate", default-features = false, optional = true }
postgate = { git = "https://github.com/openworkers/postgate", tag = "v0.1.1", default-features = false, optional = true }

# Disabled runtimes (require openworkers-core 0.5, we're on 0.7)
# openworkers-runtime-deno = { git = "https://github.com/openworkers/openworkers-runtime-deno", tag = "v0.5.1", optional = true }
# openworkers-runtime-quickjs = { git = "https://github.com/openworkers/openworkers-runtime-quickjs", tag = "v0.5.1", optional = true }
# openworkers-runtime-boa = { git = "https://github.com/openworkers/openworkers-runtime-boa", tag = "v0.5.1", optional = true }
# openworkers-runtime-jsc = { git = "https://github.com/openworkers/openworkers-runtime-jsc", tag = "v0.5.3", optional = true }

# Local paths (for development)
# openworkers-runtime-deno = { path = "../openworkers-runtime-deno", optional = true }
# openworkers-runtime-quickjs = { path = "../openworkers-runtime-quickjs", optional = true }
# openworkers-runtime-boa = { path = "../openworkers-runtime-boa", optional = true }
# openworkers-runtime-jsc = { path = "../openworkers-runtime-jsc", optional = true }

async-nats = "0.45.0"
futures = "0.3"
serde_json = "1.0"
serde = { version = "1.0.197", features = ["derive"] }
base64 = "0.22.1"
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
url = "2.5"
swc_common = "18.0.1"
swc_ecma_ast = "19.0.0"
swc_ecma_parser = "32.0.0"
swc_ecma_transforms_typescript = "38.0.0"
swc_ecma_transforms_base = "35.0.0"
swc_ecma_codegen = "21.0.0"
swc_ecma_visit = "19.0.0"
dotenvy = "0.15.7"

# https://doc.rust-lang.org/cargo/reference/profiles.html
# https://github.com/johnthagen/min-sized-rust?tab=readme-ov-file#minimizing-rust-binary-size
[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
incremental = true # Enable incremental compilation.
codegen-units = 1 # Use a single codegen unit to optimize for size.
lto = true # Enable link-time optimization.

[dev-dependencies]
criterion = { version = "0.8.1", features = ["async_tokio"] }
wat = "1.0"
serial_test = "3.2"

[[bin]]
name = "openworkers-runner"
path = "bin/main.rs"

[[bin]]
name = "snapshot"
path = "bin/snapshot.rs"

[[bench]]
name = "worker_benchmark"
harness = false
